Fix cards alignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -260,6 +260,7 @@
  .cards-wrapper {
    display: -webkit-flex;
    display: flex;
+   justify-content: center;
    .cards {
      display: -webkit-flex;
      display: flex;
